--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -26,37 +26,49 @@
             </Label>
             <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #00b894;">
                <children>
-                  <TextField layoutX="142.0" layoutY="111.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="202.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="293.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="378.0" prefHeight="26.0" prefWidth="240.0" />
                   <Label layoutX="111.0" layoutY="14.0" prefHeight="35.0" prefWidth="196.0" style="-fx-background-color: #81ecec;" text="     Fill this form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="40.0" layoutY="115.0" text="Customer Id" />
-                  <Label layoutX="40.0" layoutY="206.0" text="Name" />
-                  <Label layoutX="40.0" layoutY="297.0" text="Address" />
-                  <Label layoutX="34.0" layoutY="382.0" text="Telephone" />
+                  <Label layoutX="33.0" layoutY="137.0" text="Customer Id">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+                  <Label layoutX="46.0" layoutY="217.0" text="Name">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+                  <Label layoutX="40.0" layoutY="315.0" text="Address">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+                  <TextField fx:id="txtid" layoutX="135.0" layoutY="133.0" prefHeight="26.0" prefWidth="196.0" />
+                  <TextField fx:id="txtname" layoutX="135.0" layoutY="213.0" prefHeight="26.0" prefWidth="196.0" />
+                  <TextField fx:id="txttel" layoutX="135.0" layoutY="415.0" prefHeight="26.0" prefWidth="196.0" />
+                  <TextField fx:id="txtaddress" layoutX="135.0" layoutY="311.0" prefHeight="26.0" prefWidth="196.0" />
+                  <Label layoutX="33.0" layoutY="419.0" text="Telephone">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
                </children>
             </AnchorPane>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="213.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="213.0" onAction="#btnAddCustomerOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="295.0" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #273c75;" text="Update Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="295.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #273c75;" text="Update Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="379.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="379.0" onAction="#btnDeleteonAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="468.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="468.0" onAction="#btnSearchOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
