--- a/src/main/resources/view/logging_form.fxml
+++ b/src/main/resources/view/logging_form.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="500.0" prefWidth="880.0" style="-fx-background-color: #d1d8e0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
+<AnchorPane fx:id="rootNode" prefHeight="441.0" prefWidth="880.0" style="-fx-background-color: #D6A2E8;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
    <children>
-      <JFXTextField fx:id="txtusername" layoutX="554.0" layoutY="166.0" prefHeight="26.0" prefWidth="284.0">
+      <JFXTextField fx:id="txtusername" layoutX="508.0" layoutY="166.0" prefHeight="26.0" prefWidth="334.0">
          <effect>
             <Blend>
                <topInput>
@@ -22,17 +22,17 @@
                </topInput>
             </Blend>
          </effect></JFXTextField>
-      <Label layoutX="551.0" layoutY="148.0" text="UserName">
+      <Label layoutX="521.0" layoutY="148.0" prefHeight="18.0" prefWidth="85.0" text="UserName">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="554.0" layoutY="250.0" text="Password">
+      <Label layoutX="512.0" layoutY="230.0" prefHeight="18.0" prefWidth="70.0" text="Password">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <JFXButton buttonType="RAISED" layoutX="660.0" layoutY="350.0" onAction="#btnLoggingOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #16a085;" text="Log in">
+      <JFXButton buttonType="RAISED" layoutX="628.0" layoutY="332.0" onAction="#btnLoggingOnAction" prefHeight="27.0" prefWidth="94.0" style="-fx-background-color: #16a085;" text="    Log in">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -40,15 +40,15 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <AnchorPane layoutX="554.0" layoutY="320.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
-      <Label fx:id="txtlabel" layoutX="576.0" layoutY="316.0" text="Remember me?">
+      <AnchorPane layoutX="515.0" layoutY="299.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
+      <Label fx:id="txtlabel" layoutX="529.0" layoutY="295.0" text="Remember me?">
          <font>
             <Font size="10.0" />
          </font>
       </Label>
       <AnchorPane layoutX="362.0" layoutY="44.0" prefHeight="86.0" prefWidth="107.0" />
       <AnchorPane layoutX="513.0" layoutY="346.0" prefHeight="34.0" prefWidth="34.0" />
-      <JFXTextField fx:id="txtpassword" layoutX="554.0" layoutY="266.0" prefHeight="26.0" prefWidth="284.0">
+      <JFXTextField fx:id="txtpassword" layoutX="509.0" layoutY="254.0" prefHeight="26.0" prefWidth="334.0">
          <effect>
             <Blend>
                <topInput>
@@ -62,24 +62,19 @@
             <Image url="@image/3426587.png" />
          </image>
       </ImageView>
-      <AnchorPane prefHeight="500.0" prefWidth="506.0">
+      <AnchorPane prefHeight="454.0" prefWidth="482.0" style="-fx-background-color: #3B3B98;">
          <children>
-            <ImageView fitHeight="500.0" fitWidth="506.0" layoutX="-4.0" layoutY="-1.0">
+            <ImageView fitHeight="458.0" fitWidth="482.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/gentleman-logo-design-clothing-company-logo-vector-31051507.jpg" />
+                  <Image url="@image/istockphoto-1135332848-612x612.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="142.0" layoutY="321.0" prefHeight="35.0" prefWidth="222.0" style="-fx-background-color: #ecf0f1;" text="     Liyo Garment">
-               <font>
-                  <Font name="System Bold Italic" size="24.0" />
-               </font>
-            </Label>
          </children>
       </AnchorPane>
-      <Line endX="45.4000244140625" endY="-3.0517578125E-5" layoutX="630.0" layoutY="403.0" startX="-100.0" />
-      <Label layoutX="687.0" layoutY="394.0" text="OR" />
-      <Line endX="56.5999755859375" endY="-3.0517578125E-5" layoutX="810.0" layoutY="404.0" startX="-95.0" startY="-3.0517578125E-5" />
-      <JFXButton buttonType="RAISED" layoutX="629.0" layoutY="425.0" onAction="#btnCreateAccountOnAction" prefHeight="26.0" prefWidth="131.0" style="-fx-background-color: #16a085;" text="Create Account">
+      <Line endX="13.20001220703125" endY="-6.103515625E-5" layoutX="623.0" layoutY="380.0" startX="-132.4000244140625" startY="-6.103515625E-5" />
+      <Label layoutX="668.0" layoutY="371.0" text="OR" />
+      <Line endX="56.5999755859375" endY="-3.0517578125E-5" layoutX="809.0" layoutY="379.0" startX="-95.0" startY="-3.0517578125E-5" />
+      <JFXButton buttonType="RAISED" layoutX="602.0" layoutY="399.0" onAction="#btnCreateAccountOnAction" prefHeight="27.0" prefWidth="147.0" style="-fx-background-color: #16a085;" text="       Create Account">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -87,7 +82,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="19.0" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #0984e3;" text="Add">
+      <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="19.0" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #0984e3;" text="     Save">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -100,7 +95,7 @@
             <Image url="@image/icons8-add-24.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="267.0">
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="255.0">
          <image>
             <Image url="@image/icons8-password-30.png" />
          </image>
@@ -108,6 +103,16 @@
       <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="167.0">
          <image>
             <Image url="@image/icons8-user-50.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="18.0" fitWidth="30.0" layoutX="629.0" layoutY="337.0">
+         <image>
+            <Image url="@image/icons8-log-in-30.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="24.0" fitWidth="30.0" layoutX="607.0" layoutY="401.0">
+         <image>
+            <Image url="@image/icons8-create-64.png" />
          </image>
       </ImageView>
    </children>
